--- a/A_django_intro/package.json
+++ b/A_django_intro/package.json
@@ -14,5 +14,8 @@
 		"autoprefixer": "^10.4.0",
 		"postcss": "^8.4.5",
 		"tailwindcss": "^3.0.7"
+	},
+	"dependencies": {
+		"@tailwindcss/forms": "^0.4.0"
 	}
 }
