--- a/01_templates/package.json
+++ b/01_templates/package.json
@@ -1,5 +1,15 @@
 {
-	"devDependencies": {
-		"tailwindcss": "^3.4.1"
-	}
+  "name": "01_templates",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev:css": "tailwindcss -i ./static/src/input.css -o ./static/src/output.css --watch"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
+  },
+  "keywords": [],
+  "author": "Soikat Rahman",
+  "license": "ISC"
 }
