django templete v1:django+tailwindcss+htmx

--- a/01_templates/Pipfile
+++ b/01_templates/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 django = "*"
 django-compressor = "*"
 django-browser-reload = "*"
+django-extensions = "*"
+ipython = "*"
+bpython = "*"
+werkzeug = "*"
 
 [dev-packages]
 
