django templete v1:django+tailwindcss+htmx

--- a/01_templates/package.json
+++ b/01_templates/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:css": "tailwindcss -i ./static/src/input.css -o ./static/src/output.css --watch"
+    "dev:css": "tailwindcss -i ./static/src/input.css -o ./static/src/output.css --minify --watch"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
