--- a/01_templates/package.json
+++ b/01_templates/package.json
@@ -7,6 +7,7 @@
     "dev:css": "tailwindcss -i ./static/src/input.css -o ./static/src/output.css --minify --watch"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "tailwindcss": "^3.4.1"
   },
   "keywords": [],
