--- a/E_django_ClassViews/package.json
+++ b/E_django_ClassViews/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "daisyui": "^4.6.0",
     "tailwindcss": "^3.4.1"
   },
   "keywords": [],
