template updated with production ready setup

--- a/01_templates/Pipfile
+++ b/01_templates/Pipfile
@@ -17,6 +17,9 @@ pillow = "*"
 python-dotenv = "*"
 dj-database-url = "*"
 psycopg2 = "*"
+whitenoise = "*"
+gunicorn = "*"
+faker = "*"
 
 [dev-packages]
 
