channel layer implemented

--- a/H_channels/Pipfile
+++ b/H_channels/Pipfile
@@ -21,6 +21,7 @@ whitenoise = "*"
 gunicorn = "*"
 faker = "*"
 channels = {extras = ["daphne"], version = "*"}
+channels-redis = "*"
 
 [dev-packages]
 
